# NeoNova

./: .env.docker.example  .gitignore  LOGIN_FIX_SUMMARY.md  QUICK_START.md  README.md  SCRIPTS_SUMMARY.txt  SYSTEM_READY.md  TEST_RESULTS_V0.2.0.md  docker-compose.override.yml  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/src/: main.py
backend/src/api/: auth.py  dependencies.py
backend/src/api/routes/: auth_routes.py  conversation_routes.py  feedback_routes.py  memory_routes.py  message_routes.py
backend/src/api/schemas/: __init__.py  auth_schemas.py  conversation_schemas.py  error_schemas.py  feedback_schemas.py  memory_schemas.py
backend/src/application/: config.py
backend/src/application/dtos/: __init__.py  auth_dtos.py  conversation_dtos.py  feedback_dtos.py  memory_dtos.py  message_dtos.py
backend/src/application/interfaces/: __init__.py  llm_provider.py  (+1 more)
backend/src/domain/: __init__.py  enums.py
backend/src/infrastructure/: database.py
backend/tests/: conftest.py
backend/tests/application/: test_agent_service.py  test_memory_service.py  test_use_cases.py
backend/tests/domain/: test_entities.py
backend/tests/integration/: __init__.py  conftest.py  test_auth_flow.py  test_feedback_memory_flow.py  test_message_flow.py
backend/tests/properties/: __init__.py  test_auth_properties.py  test_conversation_message_properties.py  test_domain_properties.py  test_feedback_llm_properties.py  test_memory_agent_properties.py
(+117 files in other folders)
