[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "neonova-backend"
version = "0.1.0"
description = "NeoNova AI Assistant Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "sqlalchemy==2.0.31",
    "asyncpg==0.29.0",
    "alembic==1.13.2",
    "pydantic==2.8.2",
    "pydantic-settings==2.3.4",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "openai==1.35.14",
    "python-dotenv==1.0.1",
    "tenacity==8.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "pytest-mock==3.14.0",
    "httpx==0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pylint.main]
source-roots = ["src"]
